feat: Implement PWA features for offline support
Integrates a service worker and manifest file to enable Progressive Web App capabilities. This allows for offline access to the application and improves user experience by caching essential assets.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Google AI Studio App</title>
+    <title>ABSENSI & JURNAL SMKN 1 POCO RANAKA</title>
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#2563eb" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="Absensi SMKN 1" />
+    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/2991/2991148.png" />
   </head>
   <body>
     <div id="root"></div>
